<resources>
    <string name="app_name">NFCPaymentSimulator</string>

    <string name="title_activity_navigation">NFCPaymentSimulator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_info_label">Informácie</string>
    <string name="nav_merchandise_label">Tovar</string>
    <string name="nav_basket_label">Košík</string>
    <string name="nav_administration_label">Administrácia</string>
    <string name="nav_logout_label">Odhlásiť</string>

    <string name="add_to_cart">Kúpiť</string>
    <string name="remove_from_cart">Zaplatiť</string>

    <string name="generate_products">Vygenerovať produkty</string>
    <string name="add_to_automat">Pridať do automatu</string>

    <string name="use_card">Priložte NFC kartu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome_info">Vitajte, karta</string>
    <string name="add_product">Pridať produkt</string>
    <string name="product_title">nazov tovaru</string>
    <string name="prod_desc">popis tovaru</string>
    <string name="prod_price">cena tovaru</string>
    <string name="add_prod">Pridať produkt</string>
    <string name="add">Pridat</string>
    <string name="cancel">Zrusit</string>
    <string name="delete_product">Odstranit produkt</string>
    <string name="delete">Zmazať</string>
    <string name="add_all_items">Naplň všetky produkty</string>
    <string name="menu_title">NFC Vending Machine</string>
</resources>
