<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_info_label" />
        <item
            android:id="@+id/nav_merchandise"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_merchandise_label" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_basket_label" />
        <item
            android:id="@+id/nav_administration"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_administration_label" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/nav_logout_label" />
    </group>
</menu>
